tests/ui/return/return-disjoint-regions.stderr
error[E0515]: cannot return value referencing function parameter `x`
  --> $DIR/return-disjoint-regions.rs:4:5
   |
LL |     let y = &x;
   |             -- `x` is borrowed here
LL |     (y, y)
   |     ^^^^^^ returns a value referencing data owned by the current function

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0515`.
